[metadata]
name = package  # change & change the folder name and __init__.py inside the folder
version = file: VERSION.txt
author = Jimmie Munyi
author_email = jimmiemunyi@gmail.com
url = https://jimmiemunyi.dev
description = Description # change
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python pytorch # change
license = Apache 2.0  # change
copyright = 2023 onwards, %(author)s
language = English
status = 3
user = jimmiemunyi


[options]
python_requires = >=3.8, <4
packages = find:
install_requires=  # change & include version per project
    fastcore
    hydra-core
    metaflow  # I use metaflow to compose my DAGs

[options.extras_require]
dev =  # change & include version per project
    black # I use black + ruff linter
test = 
    pytest
    coverage

; [options.entry_points]
; console_scripts = 